--- a/speech-therapist.html
+++ b/speech-therapist.html
@@ -59,7 +59,7 @@ TIM) provides comprehensive rehabilitation therapy and management services?...</
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://ahsw.referrals.selectminds.com/jobs/speech-pathologist-home-health-16471'>Speech Pathologist (Home Health) - Adventist Health Careers</a></h5> 
+<h5><a href='https://ahsw.referrals.selectminds.com/jobs/speech-pathologist-home-health-16471'>Speech Pathologist (Home Health) - Adventist Health Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -135,7 +135,7 @@ TIM) provides comprehensive rehabilitation therapy and management services?...</
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/TheracareINC/743999692045284-speech-language-pathologist-school-based-position'>Theracare INC Speech Language Pathologist - School Based Position | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/TheracareINC/743999692045284-speech-language-pathologist-school-based-position'>Theracare INC Speech Language Pathologist - School Based Position | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
@@ -148,7 +148,7 @@ TIM) provides comprehensive rehabilitation therapy and management services?...</
 <p>Jul 9, 2019 ... We are committed to making a positive difference in the lives of those we serve. 
 As a physical, occupational, or speech therapist, we will provide you with all the?...</p>
 <hr/>
-<h5><a href='https://lluh.referrals.selectminds.com/jobs/speech-pathologist-cfy-2093'>Speech Pathologist-CFY - Loma Linda University Careers Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://lluh.referrals.selectminds.com/jobs/speech-pathologist-cfy-2093'>Speech Pathologist-CFY - Loma Linda University Careers Careers</a></h5> 
 <p><span class="badge badge-light">Loma Linda, California</span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
@@ -223,7 +223,7 @@ Reading, Pennsylvania. Review all of the job details and apply today!</p>
 <p>Jul 1, 2019 ... Speech & Language Pathologist. Los Angeles, CA. School Support ? Special 
 Education Support. Full-Time 2019-2020 School Year. Apply for this job.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/TheracareINC/743999691525085-speech-language-pathologist'>Theracare INC Speech Language Pathologist | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/TheracareINC/743999691525085-speech-language-pathologist'>Theracare INC Speech Language Pathologist | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-11</p>
 <hr/>
@@ -278,11 +278,11 @@ details?...</p>
 <p><span class="badge badge-light">Salem</span></p>
 <p>Posted on: 2019-07-08</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/bayada/jobs/4349879002'>Job Application for Speech Language Pathologist (SLP) - Hospice at BAYADA Home Health Care</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/bayada/jobs/4349879002'>Job Application for Speech Language Pathologist (SLP) - Hospice at BAYADA Home Health Care</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-08</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/accentcare/job/oRptafwD'>AccentCare, Inc.? Careers - Speech Language Pathologist SLP PRN Marble Falls TX</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/accentcare/job/oRptafwD'>AccentCare, Inc.? Careers - Speech Language Pathologist SLP PRN Marble Falls TX</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-07</p>
 <hr/>
@@ -326,7 +326,7 @@ details?...</p>
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-07-04</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/bayada/jobs/4339749002'>Job Application for Speech Language Pathologist (SLP) - Senior Living at BAYADA Home Health Care</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/bayada/jobs/4339749002'>Job Application for Speech Language Pathologist (SLP) - Senior Living at BAYADA Home Health Care</a></h5> 
 <p><span class="badge badge-light">Rockville, MD Montgomery</span></p>
 <p>Posted on: 2019-07-04</p>
 <hr/>
@@ -334,7 +334,7 @@ details?...</p>
 <p><span class="badge badge-light">Montgomery</span></p>
 <p>Posted on: 2019-07-04</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://stjhs.referrals.selectminds.com/jobs/pediatric-outpatient-speech-language-pathologist-40551'>Pediatric Outpatient Speech Language Pathologist - St. Joseph Health Careers</a></h5> 
+<h5><a href='https://stjhs.referrals.selectminds.com/jobs/pediatric-outpatient-speech-language-pathologist-40551'>Pediatric Outpatient Speech Language Pathologist - St. Joseph Health Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-04</p>
 <hr/>
@@ -379,7 +379,7 @@ supportive team; Variety of caseload with MBS on site, ENT, ICU and...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-02</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/bricknewark/ad158d80-cd1b-4324-923c-7ce7825647ea'>BRICK Education Network - Speech Language Pathologist</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/bricknewark/ad158d80-cd1b-4324-923c-7ce7825647ea'>BRICK Education Network - Speech Language Pathologist</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-02</p>
 <hr/>
@@ -391,7 +391,7 @@ supportive team; Variety of caseload with MBS on site, ENT, ICU and...</p>
 <p><span class="badge badge-light">Washington, DC</span></p>
 <p>Posted on: 2019-07-01</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/HSMC1/743999690970226-speech-language-pathologist-slp-'>HSMC Speech Language Pathologist (SLP) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/HSMC1/743999690970226-speech-language-pathologist-slp-'>HSMC Speech Language Pathologist (SLP) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-30</p>
 <hr/>
